Wed Apr 22 13:43:24 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy.conf, logger.rb, n-group-by.rb, port.rb, log.rb,
	  stdout.rb: 0.3.2-008マージ
	* port.rb: [SR#62]対応 - その3(マーシャル可能要素+オンメモリー)

Tue Apr 21 17:38:17 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* log.rb, stdout.rb: [BUG#56]対応
	* logger.rb, log.rb: Loggerにまとめ送りするように対応

Tue Apr 21 15:56:04 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [SR#62]対応 - その2

Mon Apr 20 19:08:00 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-group-by.rb, port.rb: [BUG#49]用デバッグコード追加05

Mon Apr 20 16:36:38 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [SR#62]対応 - その1

Fri Apr 17 17:21:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-group-by.rb, port.rb: [BUG#49]用デバッグコード追加

Wed Apr 15 18:13:15 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy.rb, bfile.rb, controller.rb, exceptions.rb: [REQ: #81]対応. 
	  vfileの指定する実ファイルのあるノードが立ち上がっていないときに適
	  切に例外を送る.
	
Wed Apr 15 17:10:54 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [BUG#49]用デバッグコード追加
	* n-group-by.rb: start_watch_exportsのスレッドを終了するようにした.
	
Mon Apr 13 18:12:55 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: [BUG#49]用デバッグコード追加
	* n-file-output.eb, n-group_by.rb, port.rb:  Log:*_exception self追加
	
Mon Apr 13 16:13:20 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/controller, bin/processor, master.rb, node.rb, base-app:
	  [Bug: #76]対応
	* conf.rb, bin/processor: CONF.DEBUG_PROCESSOR_TRACE_ON追加

Fri Apr 10 18:08:55 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: IMPORT POPのログをちょっと修正
	* vfile.rb: パスの指定で..の扱いの修正
	* n-file-output.rb: ちょっと

Mon Apr  6 19:02:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, b-merge-group_by.rb, bhere.rb,
	  n-barrier.rb, n-direct-product.rb, n-file-output.rb, n-filter.rb,
	  n-join.rb, n-local-file-output.rb, n-zipper.rb, port.rb: 
	  [要求: #75] IMPORT POPのログにクラス名が出るようにした.

