@@ -26,7 +26,8 @@ module Fairy
 
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
-CONF.POSTQUEUING_POLICY = {:queuing_class => :BufferedQueue}
+CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
+##CONF.BUFFEREDQUEUE_POOL_THRESHOLD = 1000
 ##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
@@ -53,9 +54,8 @@ CONF.POSTQUEUING_POLICY = {:queuing_class => :BufferedQueue}
 ##CONF.LOG_FILE = "/tmp/fairy/log"
 ##CONF.LOG_FLUSH_INTERVAL = 1
 ##CONF.LOG_LEVEL = :DEBUG
-CONF.LOG_LEVEL = :WARN
-CONF.LOG_IMPORT_NTIMES_POP = 1000
-##CONF.LOG_IMPORT_NTIMES_POP = 1000
+#CONF.LOG_LEVEL = :INFO
+##CONF.LOG_IMPORT_NTIMES_POP = 10000
 
 ##CONF.USE_RESOLV_REPLACE = false
 
