@@ -33,7 +33,7 @@ module Fairy
 	  policy = @opts[:prequeuing_policy]
 	  import = Import.new(policy)
 	  import.set_log_callback do |n| 
-	    Log::info(self, "IMPORT POP: #{n}")
+	    Log::verbose(self, "IMPORT POP: #{n}")
 	  end
 
 	  @imports.push import
