@@ -32,7 +32,7 @@ module Fairy
       import.add_key(input.key)
       input.output = import
       import.set_log_callback do |n| 
-	Log::info(self, "IMPORT POP: #{n}")
+	Log::verbose(self, "IMPORT POP: #{n}")
       end
       @imports.push import
       self
