@@ -35,7 +35,7 @@ module Fairy
 	    import.no = jinput.no
 	    import.add_key(jinput.key)
 	    import.set_log_callback do |n| 
-	      Log::info(self, "IMPORT POP: #{n}")
+	      Log::verbose(self, "IMPORT POP: #{n}")
 	    end
 
 	    import
