@@ -64,6 +64,7 @@ module Fairy
 
     def_prop :PREQUEUING_POLICY
     def_prop :POSTQUEUING_POLICY
+    def_prop :POOLQUEUE_POOL_THRESHOLD
     def_prop :ONMEMORY_SIZEDQUEUE_SIZE
     def_prop :FILEBUFFEREDQUEUE_THRESHOLD
 
@@ -170,6 +171,7 @@ module Fairy
 
   CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
+  CONF.POOLQUEUE_POOL_THRESHOLD = 1000
   CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10
   CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
@@ -193,7 +195,7 @@ module Fairy
   CONF.LOG_FILE = "/tmp/fairy/log"
   CONF.LOG_FLUSH_INTERVAL = 1
   CONF.LOG_LEVEL = :DEBUG
-  CONF.LOG_IMPORT_NTIMES_POP = 1000
+  CONF.LOG_IMPORT_NTIMES_POP = 10000
 
   CONF.USE_RESOLV_REPLACE = false
 
